# puc-servidores-mqtt

./: .gitignore  README.md
docs/: modelos.md  reuniao-29-11.md  tarefas_funcionalidades.md
exemplo/: Cargo.toml
exemplo/src/pub/: main.rs
exemplo/src/sub/: main.rs
outros/: simples_json.py
projeto/: Cargo.toml  tests.py
projeto/src/: client.rs  monitor.rs  server.rs
projeto/src/api/: mod.rs
