[package]
name = "projeto"
version = "0.1.0"
authors = ["Daniel <github.com/Leinadium>", "Alexandre <github.com/maxteralex>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.9", default-features = false, features = ["bundled"] }
serde_json = "1.0"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "monitor"
path = "src/monitor.rs"